# InferAdmin

./: .env.example  .gitignore  404.html  CNAME  Dockerfile  README.md  compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml
docs/: index.md  scope.md
scope/: index.html
search/: search_index.json
src/frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json
src/frontend/src/: App.vue  main.ts  style.css
src/frontend/src/components/centraltable/: CentralTable.vue  DataTable.vue  DataTabs.vue  TableActions.vue
src/frontend/src/components/drawers/: NewApplicationDrawer.vue  NewImageDrawer.vue  NewModelDrawer.vue  SettingsDrawer.vue
src/frontend/src/components/gpus/: GpuCard.vue  gpuContainer.vue  gpuView.vue
src/frontend/src/components/header/: CommandSection.vue  Header.vue  LogoArea.vue  SettingsButton.vue
src/inferadmin/: __init__.py  docker.py  lifespan.py  main.py  openapi_tags.py
src/inferadmin/common/: __init__.py  async_utils.py  container_management.py  logging.py
src/inferadmin/config/: loader.py  models.py
src/inferadmin/routes/: __init__.py  standard_models.py
src/inferadmin/routes/applications/: __init__.py  models.py  support.py
src/inferadmin/routes/deployments/: __init__.py  support.py
src/inferadmin/routes/images/: __init__.py  models.py  support.py
src/inferadmin/routes/infra/: __init__.py
src/inferadmin/routes/llms/: __init__.py  models.py  support.py
src/inferadmin/routes/models/: __init__.py  models.py  support.py
src/inferadmin/state/: __init__.py  manager.py
(+12 files in other folders)
