[project]
name = "inferadmin"
version = "0.0.01"
description = "A lightweight management interface for local LLM infrastructure."
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" },
    { name = "Ben Gitter", email = "gitterbd@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "huggingface-hub>=0.30.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
inferadmin = "inferadmin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]
